<resources>
    <string name="app_name">AcciMe</string>
    <string name="we_care">WE CARE</string>
    <string name="because">because</string>
    <string name="accime">AcciMe</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="welcome">WELCOME</string>
    <string name="sign_in_to_continue">Sign in to continue!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="todo3">TODO</string>
</resources>